// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateSeparator renders invalid date separator correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="Invalid timestamp"
    class="mx_TimelineSeparator"
    role="separator"
  >
    <hr
      role="none"
    />
    <div
      class="mx_DateSeparator_dateContent"
    >
      <h2
        aria-hidden="true"
        class="mx_DateSeparator_dateHeading"
      >
        Invalid timestamp
      </h2>
    </div>
    <hr
      role="none"
    />
  </div>
</DocumentFragment>
`;

exports[`DateSeparator renders the date separator correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="today"
    class="mx_TimelineSeparator"
    role="separator"
  >
    <hr
      role="none"
    />
    <div
      class="mx_DateSeparator_dateContent"
    >
      <h2
        aria-hidden="true"
        class="mx_DateSeparator_dateHeading"
      >
        today
      </h2>
    </div>
    <hr
      role="none"
    />
  </div>
</DocumentFragment>
`;

exports[`DateSeparator when feature_jump_to_date is enabled renders the date separator correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="Fri, Dec 17, 2021"
    class="mx_TimelineSeparator"
    role="separator"
  >
    <hr
      role="none"
    />
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Jump to date"
      class="mx_AccessibleButton mx_DateSeparator_jumpToDateMenu mx_DateSeparator_dateContent"
      data-testid="jump-to-date-separator-button"
      role="button"
      tabindex="0"
    >
      <h2
        aria-hidden="true"
        class="mx_DateSeparator_dateHeading"
      >
        Fri, Dec 17, 2021
      </h2>
      <div
        class="mx_DateSeparator_chevron"
      />
    </div>
    <hr
      role="none"
    />
  </div>
</DocumentFragment>
`;
